# emo-robot-esp32-light-mesh

./: .gitignore  CMakeLists.txt  README.md  pytest_esp_mesh.py  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  main.c  main.h  main_client.h  main_server.h
main/espnow/: espnow_client.c  espnow_client.h  espnow_connect.c  espnow_connect.h  espnow_server.c  espnow_server.h
main/led/: buffer.c  buffer.h  effect.h  effect_list.c  effect_list.h  renderer.c  renderer.h
main/led/effects/: chase.h  clouds.h  drop.h  explosion.h  fade.h  glow.h  lightning.h  smooth.h
main/led/emotions/: anger.h  confused.h  excited.h  flirty.h  happy.h  relaxed.h  sad.h  surprised.h
main/led/transitions/: smooth.h
main/utils/: 8bit_math.h  button.c  button.h  color.h  map.c  map.h  synced_timer.c  synced_timer.h
main/utils/integer_math/: lib8perlin.h  lib8simplex.c  lib8simplex.h  lib8tion.h
main/utils/integer_math/lib8tion/: math8.h  random8.h  scale8.h  trig8.h
main/webserver/: http_client.c  http_client.h  http_server.c  http_server.h
