idf_component_register(
    SRCS 
        "main.c"
        "utils/map.c"
        "utils/button.c"
        "utils/synced_timer.c"
        "utils/integer_math/lib8tion.c"
        "utils/integer_math/lib8simplex.c"
        "led/buffer.c"
        "led/renderer.c"
        "espnow/espnow_connect.c"
        "espnow/espnow_server.c"
        "espnow/espnow_client.c"
        "webserver/http_server.c"
        "webserver/http_client.c"
    INCLUDE_DIRS 
        "."
        "utils"
        "utils/integer_math"
        "utils/integer_math/lib8tion"
        "led"
        "led/effects"
        "led/emotions"
        "espnow"
        "webserver"
)
